--- a/fly.toml
+++ b/fly.toml
@@ -1,36 +1,23 @@
-app = "pipecat-ws-backend"
-primary_region = "fra"
+# fly.toml app configuration file generated for pipecat-ws-backend-python-uk-row on 2025-09-03T18:01:44Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'pipecat-ws-backend-python-uk-row'
+primary_region = 'fra'
 
 [build]
 
-[env]
-  PORT = "8080"
-  PIPECAT_PCM_RATE = "24000"
-
-[[services]]
+[http_service]
   internal_port = 8080
-  protocol = "tcp"
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.tcp_checks]]
-    grace_period = "10s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
-
-  [[services.http_checks]]
-    interval = "15s"
-    grace_period = "10s"
-    method = "get"
-    path = "/health"
-    protocol = "http"
-    timeout = "2s"
-
-
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
